# shuten

./: Cargo.toml  LICENSE  README.md
piskels/: Minideathstar-20230607-175353.piskel  Ship.piskel
src/: assets.rs  background.rs  collisions.rs  geometrics.rs  main.rs  movement.rs  player.rs  testlevel.rs  ui.rs
src/bullets/: mod.rs
src/emitters/: mod.rs
src/enemies/: minideathstar.rs  mod.rs
src/experiments/: randombspline
src/movement/: flights.rs  mod.rs  screenborders.rs
src/player/: machinegun.rs  missile.rs  mod.rs  rearweapon.rs
