[package]
name = "shuten"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version="0.10.1", features=["dynamic_linking", "wayland"] }
bevy-inspector-egui = "0.18.3"
bevy_pixel_camera = "0.4.0"
rand = "0.8.5"
